--- a/Assignment2/css_basics.css
+++ b/Assignment2/css_basics.css
@@ -1,1 +1,34 @@
+body {
+    background-color: rgb(72, 113, 103);
+}
 
+h1 {
+    color: tan;
+    margin-left: 20px;
+}
+
+h2 {
+    color: rgb(255, 255, 255);
+    margin-left: 20px;
+}
+
+h3 {
+    color: tan;
+    margin-left: 20px;
+}
+
+ul {
+    color: white;
+    margin-left: 30px;
+    padding: 10px;
+}
+
+p {
+    padding: 20px;
+    color: tan;
+}
+
+img {
+    float: left;
+    width: 300px;
+}
